fixed label width+overflow

--- a/styles/_json-editor-base.scss
+++ b/styles/_json-editor-base.scss
@@ -120,6 +120,8 @@ If you remix, transform, or build upon the material, you must distribute your co
 
     label {
       cursor: pointer;
+      width: 10vw; 
+      overflow:hidden;
     }
   }
 
